# ethsig-rs

./: .gitignore  Cargo.toml  README.md  gen-docs.sh  wrangler.toml
.github/workflows/: ci.yml  release.yml
src/: auth.rs  lib.rs
