[package]
name = "ethsig"
version = "0.1.0"
authors = ["Odysseas Lamtzidis <odyslam@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
ethers =  { git = "https://github.com/odyslam/ethers-rs" , branch = "fix/worker-compile", default-features = false }
worker = "0.0.7"
siwe = { git = "https://github.com/spruceid/siwe-rs" }
hex = "0.4"
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }
iri-string = "0.4"



# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
